initial commit for controller
